[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4", "setuptools_scm"]

[project]
name = "grnvae"
authors = [
    { name = "Hao Zhu", email="haozhu233@gmail.com"},
    { name = "Donna Slonim", email="donna.slonim@tufts.edu"}
]
maintainers = [
    { name = "Hao Zhu", email = "haozhu233@gmail.com" }
]
license = {file = "LICENSE"}
description = "Improving GRN Inference using Dropout Augmentation"
version = "0.0.3"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"

dependencies = [
    "numpy>=1.16.5",
    "pandas>=1.1.1",
    "torch",
    "tqdm",
    "scanpy",
    "scikit-learn"
]

[project.urls]
Home = "https://bcb.cs.tufts.edu/GRN-VAE/"